--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   "author": "Pranesh Ravi <praneshpranesh@gmail.com>",
   "license": "MIT",
   "private": true,
+  "now": {
+    "alias": "praneshr.now.sh"
+  },
   "scripts": {
-    "build": "node-sass src/index.scss dist/index.css",
+    "build:dev": "node-sass src/index.scss dist/index.css",
     "build:watch": "yarn build && node-sass src/index.scss -wo dist",
-    "build:production": "node-sass src/index.scss dist/index.css --output-style compressed",
-    "start": "http-server -c-1",
-    "deploy": "yarn build:production && now"
+    "build": "node-sass src/index.scss dist/index.css --output-style compressed",
+    "start": "http-server",
+    "start:dev": "http-server -c-1",
+    "deploy": "now && now alias"
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
